# portfolio

./: .env.local  .gitignore  Makefile  README.md  pyproject.toml  start.sh
config/: gunicorn.py  settings.py  urls.py
gallery/: admin.py  models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py  0002_alter_item_name.py  0003_item_is_enabled.py  0004_rename_name_item_title.py  0005_item_image.py  0006_alter_item_description.py
gallery/templates/gallery/: gallery.html
profile_page/: apps.py  forms.py  urls.py  views.py
profile_page/static/css/: style.css
profile_page/templates/profile_page/: _footer.html  index.html
profile_page/templates/profile_page/email/: contact.html
profile_page/templates/profile_page/sections/: about_me.html  contact_me.html  header.html  my_journey.html  my_stack.html  projects.html
templates/: base.html
templates/elements/: footer.html  navbar.html
