[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Portfolio & Blog webside in django"
authors = ["Robert Durica <r.durica@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
