[tool.poetry]
authors = ["Robert Durica <r.durica@gmail.com>"]
description = "Portfolio & Blog webside in django"
license = "MIT"
name = "portfolio"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.1"
mysqlclient = "^2.1.1"
python = "^3.10"
django-simple-captcha = "^0.5.17"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
django-redis = "^5.2.0"
django-storages = "^1.13.1"
boto3 = "^1.24.70"
whitenoise = "^6.2.0"
django-cleanup = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
